# chronicler

./: .gitignore  CONTEXT.md  Cargo.toml  README.ja.md  README.md
.claude/: tools.json
.claude-plugin/: plugin.json
.claude/workspace/delta/: delta-3590e1ca-dc53-474e-8ba7-308c9725cc23.md
.claude/workspace/planning/2026-03-16/: idr-01.md  idr-02.md  idr-03.md  idr-04.md  idr-05.md
.claude/workspace/planning/2026-03-16-doc-lifecycle/: sow.md  spec.md
.claude/workspace/planning/2026-03-16-templates/: sow.md  spec.md
.claude/workspace/planning/2026-03-21/: idr-01.md
.claude/workspace/planning/2026-03-21-gate-hook/: sow.md  spec.md
.github/workflows/: ci.yml  release.yml
.yomu/: index.db
adr/: 0001-integrate-doc-lifecycle-into-chronicler.md  0002-add-stateful-test-docs-with-yaml-lock.md  0003-replace-stop-block-with-pretooluse-gate.md  README.md
hooks/: hooks.json  wrapper.sh
src/: collector.rs  config.rs  hash.rs  lock.rs  main.rs  prompt.rs  sanitize.rs  scanner.rs  staleness.rs  td_hooks.rs  template.rs  test_discovery.rs  test_docs.rs  test_utils.rs  traverse.rs
src/templates/: api.md  architecture.md  domain.md  setup.md
workspace/docs/: architecture.md  domain.md  setup.md
