[package]
name = "chronicler"
version = "0.2.1"
edition = "2024"
description = "Claude Code hook for documentation lifecycle management"
license = "MIT"

[[bin]]
name = "chronicler"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
