[package]
name = "chronicler"
version = "0.2.2"
edition = "2024"
description = "Claude Code hook for documentation lifecycle management"
license = "MIT"

[[bin]]
name = "chronicler"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
regex = "1"
sha2 = "0.10"
glob = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
