[package]
name = "chronicler"
version = "0.3.2"
edition = "2024"
description = "Claude Code hook for documentation lifecycle management"
license = "MIT"

[[bin]]
name = "chronicler"
path = "src/main.rs"

[dependencies]
serde = { version = ">=1", features = ["derive"] }
serde_json = ">=1"
serde_yaml = ">=0.9"
regex = ">=1"
sha2 = ">=0.10"
glob = ">=0.3"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
# absolute paths
absolute_paths = "deny"
# idiomatic iterators
cast_possible_truncation = "deny"
redundant_closure_for_method_calls = "deny"
filter_map_next = "deny"
flat_map_option = "deny"
manual_filter_map = "deny"
manual_find_map = "deny"
# imports
wildcard_imports = "deny"
enum_glob_use = "deny"
# strings
str_to_string = "deny"
# arguments
needless_pass_by_value = "deny"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
